ISIS-1832: fixes uuid panel alignment (left aligned, not right)

--- a/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -154,6 +154,13 @@ body {
     border: none;
 }
 
+/*
+.collectionContentsAsAjaxTablePanel table.contents .uuidPanel,
+.collectionContentsAsAjaxTablePanel table.contents .javaSqlTimestampPanel {
+    font-family: monospace;
+}
+*/
+
 .collectionContentsAsAjaxTablePanel table.contents .javaMathBigDecimalPanel,
 .collectionContentsAsAjaxTablePanel table.contents .javaMathBigIntegerPanel,
 .collectionContentsAsAjaxTablePanel table.contents .bytePanel,
@@ -163,6 +170,7 @@ body {
 .collectionContentsAsAjaxTablePanel table.contents .floatPanel,
 .collectionContentsAsAjaxTablePanel table.contents .doublePanel {
     text-align: right;
+/*    font-family: monospace;*/
 }
 
 .collectionContentsAsAjaxTablePanel table.contents tbody td,
